Added further functionality + preset for food

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,13 +12,16 @@
     "FIREMASTER",
     "inputlist",
     "Lifesteal",
+    "MAINHAND",
     "minecraft",
     "minecraftforge",
     "mineralentity",
     "MODID",
     "netherite",
     "NETHERRACK",
+    "nightvision",
     "overworld",
+    "PODZOL",
     "randommineral",
     "REPLACEABLES",
     "smithing"
